--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,4 +22,4 @@ jobs:
       - name: Install mkdocs with plugins
         run: pip install mkdocs-material
       - name: build documentation
-        run: mkdocs gh-deploy --clean
+        run: mkdocs gh-deploy --clean --force
