--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,6 +4,10 @@ theme:
   features:
     - navigation.sections
     - navigation.tabs
+markdown_extensions:
+  - admonition
+  - pymdownx.details
+  - pymdownx.superfences
 nav:
   - 'index.md'
   - 'Beginnen met ..':
