--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -45,4 +45,5 @@ nav:
         - 'developers/ui/components/accordion.md'
         - 'developers/ui/components/cards.md'
         - 'developers/ui/components/sliders.md'
+        - 'developers/ui/components/double-sliders.md'
         - 'developers/ui/components/text-fields.md'
